Made bin/flay behave better.

--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "File system linting",
   "main": "src/index.ts",
-  "bin": "./bin/flay.sh",
+  "bin": "./bin/flay",
   "scripts": {
+    "build": "tsc",
     "test": "ts-mocha"
   },
   "mocha": {
