Cleanup + ignore node_modules.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "flay",
   "version": "1.0.0",
   "description": "File system linting",
-  "main": "src/index.ts",
+  "main": "lib/index.js",
   "bin": "./bin/flay",
   "scripts": {
     "build": "tsc",
